--- a/css/contenedores.css
+++ b/css/contenedores.css
@@ -34,7 +34,7 @@
 
 .div.div-mensaje {
     font-size: 18px;
-    height: auto;
+    height: 40px;
     width: 100%;
     background-color: #FF8D57;
     border-radius: 7px;
