--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
-.body {
+.body 
+{
     background-color: #EAEAEA;
 }
 
-.div.div-cabecera {
+.div.div-cabecera 
+{
     text-align: center;
     /*  width: 80%;
     min-height: 70px;*/
@@ -12,7 +14,8 @@
     background-size: cover;
 }
 
-.div.div-pie-pagina {
+.div.div-pie-pagina 
+{
     text-align: center;
     font-size: 14px;
     color: #999999;
@@ -20,7 +23,8 @@
     margin-bottom: 80px;
 }
 
-.nav.nav-asesor {
+.nav.nav-asesor 
+{
     background-color: #fff;
     font-family: sans-serif;
     font-size: 20px;
@@ -31,12 +35,14 @@
     text-align: left;
 }
 
-.fa.fa-icon {
+.fa.fa-icon 
+{
     width: 20px;
     height: 20px;
 }
 
-.formulario-validacion {
+.formulario-validacion 
+{
     position: absolute;
     right: 10px;
     bottom: 15px;
