--- a/css/contenedores.css
+++ b/css/contenedores.css
@@ -1,4 +1,5 @@
-.div.div-cabeza {
+.div.div-cabeza
+{
     font-size: 18px;
     height: 40px;
     text-align: left;
@@ -15,7 +16,8 @@
     margin: 0 auto;
 }
 
-.div.div-cuerpo {
+.div.div-cuerpo
+{
     font-size: 18px;
     height: auto;
     background-color: #fff;
@@ -32,7 +34,8 @@
     margin-bottom: 10px;
 }
 
-.div.div-mensaje {
+.div.div-mensaje
+{
     font-size: 18px;
     height: 40px;
     width: 100%;
@@ -48,7 +51,8 @@
     color: #fff;
 }
 
-table {
+table
+{
     width: 100%;
     border-collapse: collapse;
     font-family: sans-serif;
@@ -59,7 +63,8 @@ table {
 }
 
 th,
-td {
+td
+{
     width: 20%;
     border-collapse: collapse;
     font-family: sans-serif;
@@ -70,25 +75,30 @@ td {
     padding: 0.4rem !important;
 }
 
-th {
+th
+{
     background-color: #D9EDF7;
     border-bottom: solid 2px #FF8D57;
 }
 
-.th.th-cabeza {
+.th.th-cabeza
+{
     background-color: #D9EDF7;
     border-bottom: solid 2px #FF8D57;
 }
 
-tr:hover td {
+tr:hover td
+{
     background-color: #EEEEEE;
 }
 
-.div.div-ocultar {
+.div.div-ocultar
+{
     display: none;
 }
 
-.paginador a {
+.paginador a
+{
     display: inline-block;
     width: 35px;
 }
