--- a/css/formularios.css
+++ b/css/formularios.css
@@ -1,5 +1,4 @@
-.txt.text-input
-{
+.txt.text-input {
     font-size: 18px;
     font-family: sans-serif;
     margin: 0 auto;
@@ -13,8 +12,21 @@
     border-bottom: solid #337AB7 .2rem;
 }
 
-.input.input-error
-{
+.txt.spinner-input {
+    font-size: 18px;
+    font-family: sans-serif;
+    margin: 0 auto;
+    width: 100%;
+    height: 33px;
+    padding: 3px;
+    margin-bottom: 5px;
+    display: block;
+    border-radius: 7px;
+    border: none;
+    border-bottom: solid #337AB7 .2rem;
+}
+
+.input.input-error {
     border: solid 3px #D9534F;
     font-size: 18px;
     font-family: sans-serif;
@@ -27,14 +39,12 @@
     border-radius: 7px;
 }
 
-.txt.text-input:focus
-{
+.txt.text-input:focus {
     border-bottom: solid #FF8D57 .2rem;
     outline: none;
 }
 
-.slct.slct-combo
-{
+.slct.slct-combo {
     background-color: #fff;
     font-size: 18px;
     font-family: sans-serif;
@@ -46,8 +56,7 @@
     border-radius: 7px;
 }
 
-.slct.slct-combo-error
-{
+.slct.slct-combo-error {
     background-color: #fff;
     font-size: 18px;
     font-family: sans-serif;
@@ -59,8 +68,7 @@
     border-radius: 7px;
 }
 
-.txt.text-buscar-error
-{
+.txt.text-buscar-error {
     border: solid 3px #D9534F;
     font-size: 18px;
     font-family: sans-serif;
@@ -75,8 +83,7 @@
     margin-top: 5px;
 }
 
-.txt.text-buscar
-{
+.txt.text-buscar {
     font-size: 18px;
     font-family: sans-serif;
     width: 75%;
@@ -91,8 +98,7 @@
     margin-top: 5px;
 }
 
-.txt.txt-texto-area
-{
+.txt.txt-texto-area {
     background-color: #fff;
     color: black;
     padding: 5px;
@@ -104,8 +110,7 @@
     height: 230px;
 }
 
-.area.area-error
-{
+.area.area-error {
     border: solid 3px #D9534F;
     background-color: #fff;
     color: black;
@@ -117,14 +122,12 @@
     height: 230px;
 }
 
-.txt.txt-texto-area:focus
-{
+.txt.txt-texto-area:focus {
     border-bottom: solid #FF8D57 .2rem;
     outline: none;
 }
 
-.area.area-error:focus
-{
+.area.area-error:focus {
     border-bottom: solid #FF8D57 .2rem;
     outline: none;
 }
